###
### If you modify this file, please re-run `./contrib/revendor.sh` to update
### the dependencies. See README.md for details.
###

[package]
name = "blocksigner"
version = "2.3.0"
authors = ["Blockstream <support@blockstream.com>"]
description = "Liquid/Elements Blocksigner"

[[bin]]
name = "blocksigner"
path = "src/main.rs"

[dependencies]
toml = "0.5"

[dependencies.functionary_logs]
version = "2.3.0"
path = "../functionary_logs/"

[dependencies.functionary]
path = "../functionary"

