[package]
name = "blocksigner"
version = "2.4.1"
authors = ["Blockstream <support@blockstream.com>"]
description = "Liquid/Elements Blocksigner"

[[bin]]
name = "blocksigner"
path = "src/main.rs"

[dependencies]
toml = "0.5"

[dependencies.functionary_logs]
version = "2.4.1"
path = "../functionary_logs/"

[dependencies.functionary]
path = "../functionary"
