###
### If you modify this file, please re-run `./contrib/revendor.sh` to update
### the dependencies. See README.md for details.
###

[package]
name = "functionary"
version = "2.3.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
license = "CC0-1.0"
description = "Functionary utilities for Sidechain Elements"
keywords = [ "sidechains", "crypto", "bitcoin", "blockstream" ]

[lib]
name = "functionary"
path = "src/lib.rs"

[dev-dependencies]
hex-literal = "0.2"
tempfile = "3.1.0"

[dependencies]
byteorder = "0.3"
jsonrpc = "0.15"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
time = "0.1"

bitcoin = { version = "0.28.1", features = [ "use-serde", "rand" ] }
elements = { version = "0.19.2", features = ["serde-feature"] }
miniscript = { version = "7.0.2", features = [ "serde" ] }

functionary_common = { path = "../functionary_common/" }
functionary_logs = { path = "../functionary_logs/" }
