[package]
name = "functionary"
version = "2.4.1"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
license = "CC0-1.0"
description = "Functionary utilities for Sidechain Elements"
keywords = [ "sidechains", "crypto", "bitcoin", "blockstream" ]

[lib]
name = "functionary"
path = "src/lib.rs"

[dev-dependencies]
hex-literal = "0.2"
tempfile = "3.1.0"

[dependencies]
byteorder = "0.3"
jsonrpc = "0.15"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
time = "0.1"

bitcoin = { version = "0.31.1", features = [ "serde", "rand" ] }
elements = { version = "0.24.1", features = ["serde"] }
miniscript = { version = "11.0.0", features = [ "serde" ] }

functionary_common = { path = "../functionary_common/" }
functionary_logs = { path = "../functionary_logs/" }
