###
### If you modify this file, please re-run `./contrib/revendor.sh` to update
### the dependencies. See README.md for details.
###

[package]
name = "functionary_common"
version = "2.3.0"
authors = ["Blockstream <support@blockstream.com>"]
description = "Standard logs for Blockstream software."
build = "build.rs"

[lib]
name = "functionary_common"
path = "src/lib.rs"

[features]
default = [ "use-serde", "build-constants" ]

use-serde = [ "serde", "serde_derive", "bitcoin/use-serde", "elements/serde-feature" ]
build-constants = []

[dependencies]
byteorder = "0.3"
lazy_static = "1.3.0"
bitcoin = "0.28.1"
elements = "0.19.2"

serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

[dev-dependencies]
miniscript = "7.0.2"
