[package]
name = "functionary_common"
version = "2.4.0"
authors = ["Blockstream <support@blockstream.com>"]
description = "Standard logs for Blockstream software."
build = "build.rs"

[lib]
name = "functionary_common"
path = "src/lib.rs"

[features]
default = [ "use-serde", "build-constants" ]

use-serde = [ "serde", "serde_derive", "bitcoin/serde", "elements/serde" ]
build-constants = []

[dependencies]
byteorder = "0.3"
lazy_static = "1.3.0"
bitcoin = "0.31.1"
elements = "0.24.1"

serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

[dev-dependencies]
miniscript = "11.0.0"
