###
### If you modify this file, please re-run `./contrib/revendor.sh` to update
### the dependencies. See README.md for details.
###

[package]
name = "functionary_logs"
version = "2.1.3"
authors = ["Blockstream <support@blockstream.com>"]
description = "Standard logs for Blockstream software."

[lib]
name = "functionary_logs"
path = "src/lib.rs"

[dependencies]
jsonrpc = "0.11"
lazy_static = "1.3"
time = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0", features = [ "raw_value" ] }

functionary_common = { path = "../functionary_common/" }

bitcoin = { version = "0.28.1", features = [ "use-serde" ] }
elements = { version = "0.19.2", features = ["serde-feature"] }
miniscript = { version = "7.0.2", features = [ "serde" ] }
