[package]
name = "functionary_logs"
version = "2.4.0"
authors = ["Blockstream <support@blockstream.com>"]
description = "Standard logs for Blockstream software."

[lib]
name = "functionary_logs"
path = "src/lib.rs"

[dependencies]
jsonrpc = "0.15"
lazy_static = "1.3"
time = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0", features = [ "raw_value" ] }

functionary_common = { path = "../functionary_common/"}

bitcoin = { version = "0.31.1", features = [ "serde" ] }
elements = { version = "0.24.1", features = ["serde"] }
miniscript = { version = "11.0.0", features = [ "serde" ] }
