[package]
name = "parallel_port"
version = "2.3.0"
authors = ["Blockstream <support@blockstream.com>"]
description = "Rust port of the HSM parallel port multiplexer"
edition = "2018"
build = "build.rs"

[[bin]]
name = "parallel_port"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.33"
bitcoin = { version = "0.31.1" }
byteorder = "0.3"
clap = "2.33.0"
nix = "0.14.1"
serde = "1.0"
serde_derive = "1.0"
serialport = "3"
thiserror = "1.0.30"
time = "0.1"
toml = "0.5"

functionary_common = { path = "../functionary_common/" }
functionary_logs = { path = "../functionary_logs/" }

[build-dependencies]
regex = "1.5"
anyhow = "1.0.33"
