###
### If you modify this file, please re-run `./contrib/revendor.sh` to update
### the dependencies. See README.md for details.
###

[package]
name = "watchman"
version = "2.1.3"
authors = ["Blockstream <support@blockstream.com>"]
description = "Liquid/Elements Watchman"

[[bin]]
name = "watchman"
path = "src/main.rs"

[dependencies]
toml = "0.5"

[dependencies.functionary_logs]
version = "2.1.3"
path = "../functionary_logs/"

[dependencies.functionary]
path = "../functionary"

